[package]
name = "closed-gl"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "a safe OpenGl wrapper that keeps the C syntax"
repository = "https://github/com/devnitrate/closed-gl"
readme = "README.md"
keywords = ["graphics", "opengl", "closedgl", "rendering"]
categories = ["graphics", "rendering"]

[dependencies]
gl = "0.14.0"
